[gd_scene load_steps=5 format=3 uid="uid://dn5l3jct4wyjs"]

[ext_resource type="Script" path="res://scripts/sign_1.gd" id="1_nvxyr"]
[ext_resource type="Texture2D" uid="uid://bjafbkejrifqv" path="res://assets/sprites/Env/sign_1.png" id="2_w8vj5"]
[ext_resource type="FontFile" uid="uid://b170i2xq8cplh" path="res://assets/fonts/PixelOperator8.ttf" id="3_bo6me"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yyv2t"]
radius = 59.0339

[node name="Sign1" type="Area2D"]
z_index = 5
position = Vector2(0, -16)
collision_layer = 0
script = ExtResource("1_nvxyr")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_w8vj5")

[node name="HintArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HintArea"]
position = Vector2(0, -14)
shape = SubResource("CircleShape2D_yyv2t")

[node name="HintLabel" type="RichTextLabel" parent="."]
visible = false
z_index = 10
offset_left = -29.0
offset_top = -15.0
offset_right = 34.0
offset_bottom = -2.0
theme_override_fonts/normal_font = ExtResource("3_bo6me")
theme_override_font_sizes/normal_font_size = 8
text = "(Press A)"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color(0.278845, 0.469747, 0.791412, 0.509804)
offset_left = 393.0
offset_top = 143.0
offset_right = 900.0
offset_bottom = 447.0

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
custom_minimum_size = Vector2(300, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -175.0
offset_right = 219.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 25
text = "Ayo, WASD for movement, arrows for aiming, space to shoot!"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="HintArea" to="." method="_on_hint_area_body_entered"]
[connection signal="body_exited" from="HintArea" to="." method="_on_hint_area_body_exited"]
